--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(besceaApp)
 export(besceaBuildModel)
 export(besceaLoadData)
 export(besceaSearch)
+export(downloadSneaplarge)
 export(missingModuleStopper)
