--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,4 @@ export(besceaBuildModel)
 export(besceaLoadData)
 export(besceaSearch)
 export(downloadSneaplarge)
-export(missingModuleStopper)
+export(pythonModulesCheck)
