--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: bescea
 Title: Instant Search Engine
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
     person(given = "Harry",
            family = "Ahlas",
            role = c("aut", "cre"),
            email = "hahlas@hotmail.com")
-Description: Quickly build a Shiny search engine using FastText and SpaCy. Ideal for use on short comments. Can build a model using your own data or load a pretrained model. Based heavily on the work of Josh Taylor (https://twitter.com/josh_taylor_01, https://towardsdatascience.com/how-to-build-a-search-engine-9f8ffa405eac).
+Description: Quickly build a Shiny search engine using FastText, Whoosh, and SpaCy. Ideal for use on short comments. Can build a model using your own data or load a pretrained model. Based heavily on the work of Josh Taylor (https://twitter.com/josh_taylor_01, https://towardsdatascience.com/how-to-build-a-search-engine-9f8ffa405eac).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -15,7 +15,8 @@ RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
 Imports:
-    shiny,
-    reticulate,
     DT,
+    reticulate,
+    rlang,
+    shiny,
     writexl
